Added folder to repository

--- a/coffee/coffee.html
+++ b/coffee/coffee.html
@@ -54,7 +54,7 @@
         </div>
 
         <section class="img-container">
-            <img src="2.png" class="img-2">
+            <img src="images/2.png" class="img-2">
         </section>
      </section>
 
